Add images and some basic styling

--- a/slider.html
+++ b/slider.html
@@ -32,12 +32,8 @@
         </div>
         <img src="./img/Arrow1.png" class="arrowRight" alt="" />
     </div>
-    <div class="bottom">
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-       </div>
+    <div class="bottom"></div>
+       </div> 
     </div>
     <script src="./slider.js"></script>
 </body>
