--- a/quiz.html
+++ b/quiz.html
@@ -11,9 +11,36 @@
 <body>
     <div class="container">
         <div class="game"></div>
-        <div class="result"></div>
-        <div class="game"></div>
-    HELLLLLLLLLLLLLOOOOOOOOO
+        <div class="content"></div>
+        <h1 class="question">Which day is the best day of the week?</h1>
+       <div class="answers">
+        <div class="answer">
+            <input name="answer" type="radio" id="answer1" value="false">
+            <label for="answer1">Monday</label>
+        </div>
+        <div class="answer">
+            <input name="answer" type="radio" id="answer2" value="false">
+            <label for="answer2">Wednesday</label>
+        </div>
+        <div class="answer">
+            <input name="answer" type="radio" id="answer3" value="true">
+            <label for="answer1">Friday</label>
+        </div>
+        <div class="answer">
+            <input name="answer" type="radio" id="answer4" value="true">
+            <label for="answer1">Saturday</label>
+        </div>
+       </div>
+       <button class="submit">submit</button>
+    </div> 
+        <div class="result">
+            <h1>Congratulations</h1>
+            <h3 class="correct">Correct Answers: 0</h3>
+            <h3 class="wrong">Wrong Answers: 0</h3>
+            <h2 class="score">Score: -30</h2>
+            <button class="play">Play Again></button>
+        </div>
+        <div class=""></div>
     <script>src="./quiz.js"</script>
 </body>
 </html>
