--- a/quiz.html
+++ b/quiz.html
@@ -6,31 +6,30 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/quiz.css">
-    <title>Quiz prjoject</title>
+    <title>Quiz project</title>
 </head>
 <body>
     <div class="container">
         <div class="game"></div>
         <div class="content"></div>
-        <h1 class="question">Which day is the best day of the week?</h1>
-       <div class="answers">
-        <div class="answer">
-            <input name="answer" type="radio" id="answer1" value="false">
-            <label for="answer1">Monday</label>
-        </div>
-        <div class="answer">
-            <input name="answer" type="radio" id="answer2" value="false">
-            <label for="answer2">Wednesday</label>
-        </div>
-        <div class="answer">
-            <input name="answer" type="radio" id="answer3" value="true">
-            <label for="answer1">Friday</label>
-        </div>
-        <div class="answer">
-            <input name="answer" type="radio" id="answer4" value="true">
-            <label for="answer1">Saturday</label>
-        </div>
-       </div>
+        <h1 class="question">Which day is the best day of the week?</h1>  
+    
+    <div class="answer">
+        <input name="answer" type="radio" id="answer1" value="false">
+        <label for="answer1">Answer1</label>
+    </div>
+    <div class="answer">
+        <input name="answer" type="radio" id="answer2" value="false">
+         <label for="answer2">Answer2</label>
+    </div>
+    <div class="answer">
+        <input name="answer" type="radio" id="answer3" value="false">
+        <label for="answer3">Answer3</label>
+    </div>
+    <div class="answer">
+        <input name="answer" type="radio" id="answer4" value="false">
+        <label for="answer4">Answer4</label>
+    </div>
        <button class="submit">submit</button>
     </div> 
         <div class="result">
@@ -40,7 +39,7 @@
             <h2 class="score">Score: -30</h2>
             <button class="play">Play Again></button>
         </div>
-        <div class=""></div>
-    <script>src="./quiz.js"</script>
+        <div class=></div>
+        <script src="./quiz.js"></script>
 </body>
 </html>
