--- a/quiz.html
+++ b/quiz.html
@@ -30,16 +30,16 @@
         <input name="answer" type="radio" id="answer4" value="false">
         <label for="answer4">Answer4</label>
     </div>
-       <button class="submit">submit</button>
+       <button class="submit" onclick="showResult()">submit</button>
     </div> 
-        <div class="result">
-            <h1>Congratulations</h1>
-            <h3 class="correct">Correct Answers: 0</h3>
-            <h3 class="wrong">Wrong Answers: 0</h3>
-            <h2 class="score">Score: -30</h2>
-            <button class="play">Play Again></button>
-        </div>
-        <div class=></div>
-        <script src="./quiz.js"></script>
+    <div class="result hidden">
+        <h1>Congratulations</h1>
+        <h3 class="correct">Correct Answers: 0</h3>
+        <h3 class="wrong">Wrong Answers: 0</h3>
+        <h2 class="score">Score: -30</h2>
+        <button class="play">Play Again></button>
+    </div>
+    <div class=></div>
+    <script src="./quiz.js"></script>
 </body>
 </html>
