started filter training project

--- a/filter.html
+++ b/filter.html
@@ -12,21 +12,34 @@
         <h1>Categories</h1>
         <div class="cats">
             <span class="cats">all</span>
-            <span class="cats">Casual</span>
-            <span class="cats">Dress</span>
-            <span class="cats">Sport</span>
-            <span class="cats">Luxury</span>
+            <span class="cats">Downhill</span>
+            <span class="cats">Freeride</span>
+            <span class="cats">Dance</span>
+            <span class="cats">LDP</span>
         </div>
         <h1>Maximum Price</h1>
         <div class="price"></div>
         <input type="range" class="priceRange">
-        <span class="priceValue">$40</span>
+        <span class="priceValue">€249,95</span>
     </div>
   </div>
     <div class="content">
         <div class="products">
-
-        </div>
+<div class="product">
+    <img src="https://longboardsusa.com/cdn/shop/products/rocket-mini-hades-31-1-downhill-freeride-longboard-deck-10th-year-series-1_619x619.jpg?v=1680478407"
+    alt="">
+    <span class="name">Rocket Mini Hades</span>
+    <span class="priceText">€249,95</span>
+    <img src="https://www.saltypeaks.com/pi/148/Loaded-Bhangra-Longboard-Deck-Base.jpg" alt="">
+    <span class="name">Loaded Bhangra</span>
+    <span class="priceText">€294,95</span>
+    <img src= "https://www.sickboards.nl/90059-large_default/landyachtz-evo-40-spectrum-longboard-complete.jpg" alt="">
+    <span class="name">Landyachtz Evo</span>
+    <span class="priceText">€289,95</span>
+    <img src="https://www.sickboards.nl/99901-large_default/pantheon-supersonic-365-longboard-deck.jpg" alt="">
+    <span class="name">Pantheon Supersonic</span>
+    <span class="priceText">€229,95</span>
+</div>
     <script src="./filter.js"></script>
 </body>
 </html>
