--- a/quiz1.html
+++ b/quiz1.html
@@ -17,13 +17,13 @@
         <h1 class="question">Which day is the best day of the week?</h1>      
         <div class="answer">
             <input name="answer" type="radio" id="answer1" value="false">
-            <label for="answer1">Answer1 </label>
+            <label for="answer1">Monday </label>
             <input name="answer" type="radio" id="answer1" value="false">
-            <label for="answer1">Answer1</label>
+            <label for="answer1">Wednesday</label>
             <input name="answer" type="radio" id="answer1" value="false">
-            <label for="answer1">Answer1</label>
-            <input name="answer" type="radio" id="answer1" value="false">
-            <label for="answer1">Answer1</label>
+            <label for="answer1">Thursday</label>
+            <input name="answer" type="radio" id="answer1" value="true">
+            <label for="answer1">Saturday</label>
         </div>
         <button class="submit" onclick="nextPage('quiz2.html')">Next</button>
     </div> 
