--- a/quiz2.html
+++ b/quiz2.html
@@ -17,16 +17,16 @@
         <h1 class="question">What is Japan's most famous food item?</h1>  
         <div class="answer">
             <input name="answer" type="radio" id="answer1" value="false">
-            <label for="answer1">Answer1</label>
+            <label for="answer1">Pho noodle</label>
+            <input name="answer" type="radio" id="answer1" value="true">
+            <label for="answer1">Ramen noodle</label>
             <input name="answer" type="radio" id="answer1" value="false">
-            <label for="answer1">Answer1</label>
+            <label for="answer1">Teokbokki</label>
             <input name="answer" type="radio" id="answer1" value="false">
-            <label for="answer1">Answer1</label>
-            <input name="answer" type="radio" id="answer1" value="false">
-            <label for="answer1">Answer1</label>
+            <label for="answer1">Kebab</label>
         </div>
         <button class="submit" onclick="nextPage('quiz3.html')">Next</button>
-    </div> 
+    </div>  
     <script src="./quiz.js"></script>
 </body>
 </html>
