--- a/results.html
+++ b/results.html
@@ -13,7 +13,10 @@
     <div class="container">
         <div class="result">
             <h1>Congratulations</h1>
-            <button class="play" onclick="restartQuiz()">Play Again</button>
+            <h3 class="correct"></h3>
+            <h3 class="wrong"></h3>
+            <h2 score="score"></h2>
+         <button class="play" onclick="restartQuiz()">Play Again</button>
         </div>
     </div>
     <script src="./quiz.js"></script>
