minor fixes and changes

--- a/filter.html
+++ b/filter.html
@@ -24,18 +24,24 @@
     </div>
   </div>
     <div class="content">
-        <div class="products">
+       <div class="products">
 <div class="product">
     <img src="https://longboardsusa.com/cdn/shop/products/rocket-mini-hades-31-1-downhill-freeride-longboard-deck-10th-year-series-1_619x619.jpg?v=1680478407"
     alt="">
     <span class="name">Rocket Mini Hades</span>
     <span class="priceText">€249,95</span>
+    <div class="products">
+        <div class="product">
     <img src="https://www.saltypeaks.com/pi/148/Loaded-Bhangra-Longboard-Deck-Base.jpg" alt="">
     <span class="name">Loaded Bhangra</span>
     <span class="priceText">€294,95</span>
+    <div class="products">
+        <div class="product">
     <img src= "https://www.sickboards.nl/90059-large_default/landyachtz-evo-40-spectrum-longboard-complete.jpg" alt="">
     <span class="name">Landyachtz Evo</span>
     <span class="priceText">€289,95</span>
+    <div class="products">
+        <div class="product">
     <img src="https://www.sickboards.nl/99901-large_default/pantheon-supersonic-365-longboard-deck.jpg" alt="">
     <span class="name">Pantheon Supersonic</span>
     <span class="priceText">€229,95</span>
